--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "clear && concurrently 'vite' 'node server.js'",
-    "dev": "clear && concurrently 'vite' 'nodemon server.js'",
+    "start": "clear && concurrently 'vite' 'node server/server.js'",
+    "dev": "clear && concurrently 'vite' 'nodemon server/server.js'",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "sass": "^1.57.1",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.15",
     "vite": "^2.9.0"
+  },
+  "react-dotenv": {
+    "whitelist": ["API_URL"]
   }
 }
